opam-version: "2.0"
maintainer:   "Clement Pascutto"
authors:      ["Clement Pascutto" "Thomas Gazagnaire" "Ioana Cristescu"]
license:      "MIT"
homepage:     "https://github.com/mirage/index"
bug-reports:  "https://github.com/mirage/index/issues"
dev-repo:     "git+https://github.com/mirage/index.git"

build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"   {>= "4.03.0"}
  "cmdliner"{>= "1.0.3"}
  "dune"    {>= "2.7.0"}
  "fmt"     {>= "0.8.7"}
  "index"   {= version}
  "re"     {>= "1.9.0"}
  "metrics"
  "metrics-unix"
  "ppx_deriving_yojson"
  "stdlib-shims"
  "yojson"
  "repr"
  "ppx_repr"
]

synopsis: "Index benchmarking suite"
