opam-version: "2.0"
synopsis: "Index benchmarking suite"
maintainer: "Clement Pascutto"
authors: ["Clement Pascutto" "Thomas Gazagnaire" "Ioana Cristescu"]
license: "MIT"
homepage: "https://github.com/mirage/index"
bug-reports: "https://github.com/mirage/index/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "cmdliner"
  "dune" {>= "2.7.0"}
  "fmt"
  "index" {= version}
  "metrics"
  "metrics-unix"
  "ppx_deriving_yojson"
  "re" {>= "1.9.0"}
  "stdlib-shims"
  "yojson"
  "ppx_repr"
  "mtime" {>= "2.0.0"}
  "logs" {>= "0.7.0"}
  "progress" {>= "0.2.1"}
  "tezos-base58" {>= "1.0.0" & with-test}
  "digestif" {>= "0.7" & with-test}
  "optint" {>= "0.1.0" & with-test}
  "repr" {>= "0.2.1" & with-test}
  "rusage" {>= "1.0.0" & with-test}
]
conflicts: [
  "result" {< "1.5"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/index.git"
