opam-version: "2.0"
maintainer:   "Clement Pascutto"
authors:      ["Clement Pascutto" "Thomas Gazagnaire"]
license:      "MIT"
homepage:     "https://github.com/mirage/index"
bug-reports:  "https://github.com/mirage/index/issues"
dev-repo:     "git+https://github.com/mirage/index.git"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"   {>= "4.03.0"}
  "dune"    {build & >= "1.11.0"}
  "fmt"
  "logs"
  "alcotest" {with-test}
  "crowbar" {with-test}
  "re" {with-test}
]
synopsis: "Scalable indexes for Ocaml"
