opam-version: "2.0"
maintainer:   "Clement Pascutto"
authors:      [
   "Craig Ferguson <craig@tarides.com>"
   "Thomas Gazagnaire <thomas@tarides.com>"
   "Ioana Cristescu <ioana@tarides.com>"
   "Clément Pascutto <clement@tarides.com>"
]
license:      "MIT"
homepage:     "https://github.com/mirage/index"
bug-reports:  "https://github.com/mirage/index/issues"
dev-repo:     "git+https://github.com/mirage/index.git"
doc:          "https://mirage.github.io/index/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"   {>= "4.08.0"}
  "dune"    {>= "2.7.0"}
  "repr"
  "ppx_repr"
  "fmt"
  "logs"
  "mtime"   {>= "1.0.0"}
  "cmdliner"
  "progress"
  "alcotest" {with-test}
  "crowbar" {with-test & >= "0.2"}
  "re" {with-test}
]
synopsis: "A platform-agnostic multi-level index for OCaml"
description:"""
Index is a scalable implementation of persistent indices in OCaml.

It takes an arbitrary IO implementation and user-supplied content
types and supplies a standard key-value interface for persistent
storage. Index provides instance sharing: each OCaml
run-time can share a common singleton instance.

Index supports multiple-reader/single-writer access. Concurrent access
is safely managed using lock files."""

pin-depends: [
  [ "repr.dev"       "git+https://github.com/CraigFe/repr#b705653a96614787966b9dd63d071576ad18a2c9" ]
  [ "ppx_repr.dev"   "git+https://github.com/CraigFe/repr#b705653a96614787966b9dd63d071576ad18a2c9" ]
  [ "progress.dev"   "git+https://github.com/CraigFe/progress.git#abed69070bc5c10003af1fbbc50ea2ca83877de6" ]
]
