(executable
 (public_name main)
 (modules main)
 (package index-bench)
 (libraries fmt index index.unix common cmdliner stdlib-shims yojson))

(executable
 (public_name db_bench)
 (modules db_bench)
 (package index-bench)
 (libraries fmt index index.unix common bigstring rresult logs logs.fmt
   cmdliner metrics metrics-unix lmdb stdlib-shims yojson))

(alias
 (name bench)
 (package index-bench)
 (action
  (run ./main.exe)))

(library
 (name common)
 (modules common)
 (libraries fmt index index.unix logs logs.fmt stdlib-shims yojson))
