(library
 (name common)
 (modules common)
 (libraries progress logs fmt mtime mtime.clock.os unix))

(executable
 (name bench)
 (modules bench)
 (preprocess
  (pps ppx_repr ppx_deriving_yojson))
 (libraries index index.unix cmdliner metrics metrics-unix yojson fmt re
   stdlib-shims common mtime mtime.clock.os unix))

(alias
 (name bench)
 (deps ./bench.exe))

(rule
 (alias runbench)
 (action
  (run ./bench.exe)))

(executable
 (name replay)
 (modules replay)
 (preprocess
  (pps ppx_repr))
 (libraries index index.unix unix cmdliner logs repr ppx_repr common
   digestif.ocaml tezos-base58 optint fmt rusage mtime mtime.clock.os))

;; Require the above executables to compile during tests

(rule
 (alias runtest)
 (package index-bench)
 (deps bench.exe replay.exe)
 (action (progn)))
